--- a/.github/workflows/build_grunt.yaml
+++ b/.github/workflows/build_grunt.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: run build
-        run: sudo DEBUG=1 ./build_complete.sh ${{ matrix.board }} distro=ubunru desktop=kde compress_img=1 quiet=1
+        run: sudo DEBUG=1 ./build_complete.sh ${{ matrix.board }} distro=ubuntu desktop=kde compress_img=1 quiet=1
 
       - name: upload img
         uses: actions/upload-artifact@v4
